# git-sift

./: LICENSE  README.md  pyproject.toml
.claude/commands/: review-ai-changes.md
.github/workflows/: workflow.yml
src/git_sift/: __init__.py  browser.py  categorizer.py  claude_runner.py  cli.py  git.py  merger.py  models.py  parser.py  renderer.py  session.py  skill.py  summary.py  wizard.py
src/git_sift.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/git_sift/detector/: __init__.py  content_rules.py  dep_extractor.py  path_rules.py
tests/: test_browser.py  test_categorizer.py  test_check.py  test_content_rules.py  test_dep_extractor.py  test_merger.py  test_parser.py  test_path_rules.py  test_session.py  test_skill.py
